website/assets/less/viewport.less
.mobile {
  @media (min-width: 575.98px) {
    display: none;
  }
}

.tablet {
  @media (min-width: 991.98px) {
    display: none;
  }
}

.desktop {
  display: none;

  @media (min-width: 992px) {
    display: block;
  }
}

.none {
  display: none;
}

.mobile-b {
  @media (max-width: 576px) {
    display: block;
  }
}

.tablet-b {
  @media (min-width: 576px) and (max-width: 991.98px) {
    display: block;
  }
}

.desktop-b {
  @media (min-width: 992px) {
    display: block;
  }
}

.overflow-y-auto {
  overflow-y: auto;
}

